change chrome header color

--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Michroma&family=Space+Grotesk:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<meta name="theme-color" content="#000000" />
 		%sveltekit.head%
 
 		<script type="module">
