fix offline mode

--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,11 @@
 			rel="stylesheet"
 		/>
 		<meta name="theme-color" content="#000000" />
+
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-title" content="FIST Ref" />
 		%sveltekit.head%
 
 		<script type="module">
